unpackaged/main/default/objects/Envelope__c/fields/Current_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Step__c</fullName>
    <label>Current Step</label>
    <length>80</length>
    <type>Text</type>
</CustomField>