unpackaged/main/default/objects/Envelope__c/fields/Envelope_JSON__c.field-meta.xml
<CustomField>
    <fullName>Envelope_JSON__c</fullName>
    <label>Envelope JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>