unpackaged/main/default/objects/Envelope__c/fields/Envelope_Version__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Version__c</fullName>
    <label>Envelope Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>