unpackaged/main/default/objects/Envelope__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Envelopes</relationshipLabel>
    <relationshipName>Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>