unpackaged/main/default/objects/Envelope__c/fields/Household_Name__c.field-meta.xml
<CustomField>
    <fullName>Household_Name__c</fullName>
    <label>Household Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>