unpackaged/main/default/objects/Envelope__c/fields/Missing_Items_Count__c.field-meta.xml
<CustomField>
    <fullName>Missing_Items_Count__c</fullName>
    <description>Inputs the envelope&#39;s outstanding action items still owe, as counted by the wizard (c/envelopeFormSchema) on its last save. Internal app state written only by WizardEnvelopeStateService.saveEnvelopeState and read by the envelope list&#39;s Missing Items column; never entered by hand. Null means no save has computed it yet, which the list renders as 0.</description>
    <label>Missing Items Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>