unpackaged/main/default/objects/Envelope__c/fields/Missing_Items_Has_Plus__c.field-meta.xml
<CustomField>
    <fullName>Missing_Items_Has_Plus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks Missing_Items_Count__c as a lower bound: an unfilled Key Point gates further unknown fields, so the list renders the count with a trailing &#39;+&#39;. Written with the count by WizardEnvelopeStateService.saveEnvelopeState.</description>
    <label>Missing Items Has Plus</label>
    <type>Checkbox</type>
</CustomField>