unpackaged/main/default/objects/Envelope__c/fields/Number_of_Paused_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Paused_Interviews__c</fullName>
    <label>Number of Paused Interviews</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>