unpackaged/main/default/objects/Envelope__c/fields/State_File_DocumentId__c.field-meta.xml
<CustomField>
    <fullName>State_File_DocumentId__c</fullName>
    <label>State File Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>