unpackaged/main/default/objects/Envelope__c/fields/State_Storage__c.field-meta.xml
<CustomField>
    <fullName>State_Storage__c</fullName>
    <label>State Storage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
                <default>true</default>
                <label>Field</label>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>